--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet-list.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet-list.html
@@ -11,6 +11,7 @@
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../../bower_components/paper-styles/color.html">
 <link rel="import" href="../../bower_components/paper-styles/typography.html">
+<link rel="import" href="../../bower_components/paper-fab/paper-fab.html">
 
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
@@ -58,6 +59,13 @@
             #message {
                 @apply(--layout-fit);
             }
+
+            #fab {
+                position: absolute;
+                background-color: #164410;
+                bottom: 16px;
+                right: 16px;
+            }
         </style>
 
         <firebase-query app-name="crew-team-manager" id="query" path="/boats" data="{{_data}}">
@@ -77,7 +85,7 @@
                 <crew-team-manager-fleet-list-message id="message"></crew-team-manager-fleet-list-message>
             </iron-pages>
 
-
+            <paper-fab id="fab" icon="add" on-click="_handleActionCreate"></paper-fab>
         </app-header-layout>
 
 
@@ -119,8 +127,11 @@
                 }));
             }
 
-            _handleActionDetail(e) {
-                console.log(e);
+            _handleActionCreate() {
+                this.dispatchEvent(new CustomEvent(crewTeamManagerFleetList.is + '-action-create', {
+                    bubbles: true,
+                    composed: true
+                }));
             }
 
             _updatePage(dataSplices) {
