--- a/elements/crew-team-manager-fleet/crew-team-manager-fleet.html
+++ b/elements/crew-team-manager-fleet/crew-team-manager-fleet.html
@@ -13,6 +13,7 @@
 <link rel="import" href="crew-team-manager-fleet-list.html">
 <link rel="import" href="crew-team-manager-fleet-detail.html">
 <link rel="import" href="crew-team-manager-fleet-edit.html">
+<link rel="import" href="crew-team-manager-fleet-create.html">
 
 
 <dom-module id="crew-team-manager-fleet">
@@ -47,7 +48,8 @@
         </style>
 
         <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
-            <crew-team-manager-fleet-list id="list" menu-hidden$="[[wideLayout]]" on-crew-team-manager-fleet-list-results-action-detail="_handleActionDetail">
+            <crew-team-manager-fleet-list id="list" menu-hidden$="[[wideLayout]]" on-crew-team-manager-fleet-list-results-action-detail="_handleActionDetail"
+                on-crew-team-manager-fleet-list-action-create="_handleActionCreate">
             </crew-team-manager-fleet-list>
 
             <crew-team-manager-fleet-detail id="detail" boat="[[_boat]]" on-crew-team-manager-fleet-detail-action-back="_handleActionBack"
@@ -57,6 +59,9 @@
             <crew-team-manager-fleet-edit edit="[[_edit]]" id="edit" boat="[[_boat]]" on-crew-team-manager-fleet-edit-action-back="_handleActionBackOnce"
                 on-crew-team-manager-fleet-edit-action-saved="_handleActionSaved">
             </crew-team-manager-fleet-edit>
+
+            <crew-team-manager-fleet-create id="create" on-crew-team-manager-fleet-create-action-cancel="_handleActionCancel" on-crew-team-manager-fleet-create-action-created="_handleActionCreated">
+            </crew-team-manager-fleet-create>
         </iron-pages>
 
         <paper-toast id="toast" duration="4000">[[_toast]]</paper-toast>
@@ -106,6 +111,17 @@
                 this._page = 'list';
             }
 
+            _handleActionCreate() {
+                this._page = 'create';
+            }
+
+            _handleActionCancel(e) {
+                this._page = 'list';
+                this._toast = 'Cancelled Boat Create';
+                this.$.toast.fitInto = this.$.pages;
+                this.$.toast.open();
+            }
+
             _handleActionBackOnce(e) {
                 this._page = 'detail';
             }
@@ -127,6 +143,14 @@
             _handleActionDelete(e) {
                 this._page = 'list';
                 this._toast = 'Boat Deleted';
+                this.$.toast.fitInto = this.$.pages;
+                this.$.toast.open();
+            }
+
+            _handleActionCreated(e) {
+                this._page = 'detail';
+                this._boat = e.detail.boat;
+                this._toast = 'Boat Created';
                 this.$.toast.fitInto = this.$.pages;
                 this.$.toast.open();
             }
