--- a/elements/crew-team-manager-rigger/crew-team-manager-rigger-create.html
+++ b/elements/crew-team-manager-rigger/crew-team-manager-rigger-create.html
@@ -14,7 +14,7 @@
 
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
-<dom-module id="crew-team-manager-schedule-edit">
+<dom-module id="crew-team-manager-rigger-create">
     <template>
         <style>
              :host {
@@ -32,7 +32,7 @@
                 color: #fff;
             }
 
-            #editor {
+            #createor {
                 background-color: white;
                 @apply(--layout-flex);
             }
@@ -63,21 +63,19 @@
 
             <app-header reveals>
                 <app-toolbar id="toolbar">
-                    <paper-icon-button id="back" icon="arrow-back" on-click="_handleActionBack"></paper-icon-button>
-                    <div main-title id="title">Edit</div>
+                    <paper-icon-button id="back" icon="close" on-click="_handleActionCancel"></paper-icon-button>
+                    <div main-title id="title">Create</div>
                     <paper-icon-button id="save" icon="check" on-click="_handleActionSave"></paper-icon-button>
                 </app-toolbar>
             </app-header>
 
-            <div id="editor">
+            <div id="createor">
                 <form is="iron-form" id="form" method="post" action="/form/handler">
-                    <paper-input id="name" label="name" value="{{edit.name}}"></paper-input>
-                    <paper-input id="street-address" label="street address" value="{{edit.streetAddress}}"></paper-input>
-                    <paper-input id="city" label="city" value="{{edit.city}}"></paper-input>
-                    <paper-input id="state" label="state" value="{{edit.state}}"></paper-input>
-                    <paper-toggle-button id="toggle-button" on-click="_toggleDrive">Head Race: [[_head]]</paper-toggle-button>
-                    <paper-input id="location-image" label="location image" value="{{edit.locationImage}}"></paper-input>
-                    <paper-input id="cost" label="cost" value="{{edit.cost}}"></paper-input>
+                    <paper-input id="boat-name" label="boat-name"></paper-input>
+                    <paper-input id="side" label="side" value="{{create.side}}"></paper-input>
+                    <paper-input id="style" label="style" value="{{create.style}}"></paper-input>
+                    <paper-input id="type" label="type" value="{{create.type}}"></paper-input>
+                    <paper-input id="seat" label="seat" value="{{create.seat}}"></paper-input>
                 </form>
             </div>
 
@@ -87,41 +85,46 @@
 
     <script>
         // Extend Polymer.Element with MyMixin
-        class crewTeamManagerScheduleEdit extends Polymer.Element {
+        class crewTeamManagerRiggerCreate extends Polymer.Element {
 
             static get is() {
-                return 'crew-team-manager-schedule-edit'
+                return 'crew-team-manager-rigger-create'
             }
 
             static get properties() {
                 return {
-                    edit: {
-                        type: Object
+                    create: {
+                        type: Object,
+                        side: '',
+                        style: '',
+                        type: '',
+                        seat: ''
+
                     },
 
-                    regatta: {
+                    rigger: {
                         type: String
                     },
 
-                    _head: {
+                    _drive: {
                         type: Boolean,
                         value: false
                     }
                 }
             }
 
-            _handleActionBack(e) {
-                this.dispatchEvent(new CustomEvent(crewTeamManagerScheduleEdit.is + '-action-back', {
+            _handleActionCancel(e) {
+                this.dispatchEvent(new CustomEvent(crewTeamManagerRiggerCreate.is + '-action-cancel', {
                     bubbles: true,
                     composed: true
                 }));
             }
 
             _handleActionSave(e) {
-                this.$.firebase.data = JSON.parse(JSON.stringify(this.edit));
-                this.$.firebase.saveValue('regattas', this.regatta)
+                console.log(this.create);
+                this.$.firebase.saveValue('riggers')
                     .then(() => {
-                        this.dispatchEvent(new CustomEvent(crewTeamManagerScheduleEdit.is + '-action-saved', {
+                        this.dispatchEvent(new CustomEvent(crewTeamManagerRiggerCreate.is + '-action-saved', {
                             bubbles: true,
                             composed: true
                         }));
@@ -132,12 +135,12 @@
 
             _toggleDrive() {
                 console.log('here');
-                if (this._head) {
-                    this.edit.head = false;
-                    this._head = 'no';
+                if (this._drive) {
+                    this.create.driver = 'no';
+                    this._drive = false;
                 } else {
-                    this.edit.head = true;
-                    this._head = 'yes';
+                    this.create.driver = 'yes';
+                    this._drive = true;
 
                 }
             }
@@ -145,6 +148,6 @@
         }
 
         // Register custom element definition using standard platform API
-        customElements.define(crewTeamManagerScheduleEdit.is, crewTeamManagerScheduleEdit);
+        customElements.define(crewTeamManagerRiggerCreate.is, crewTeamManagerRiggerCreate);
     </script>
 </dom-module>
