--- a/elements/crew-team-manager-rigger/crew-team-manager-rigger-list.html
+++ b/elements/crew-team-manager-rigger/crew-team-manager-rigger-list.html
@@ -11,6 +11,7 @@
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../../bower_components/paper-styles/color.html">
 <link rel="import" href="../../bower_components/paper-styles/typography.html">
+<link rel="import" href="../../bower_components/paper-fab/paper-fab.html">
 
 <link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
 
@@ -58,11 +59,16 @@
             #message {
                 @apply(--layout-fit);
             }
+
+            #fab {
+                position: absolute;
+                right: 16px;
+                bottom: 16px;
+            }
         </style>
 
         <firebase-query app-name="crew-team-manager" id="query" path="/riggers" data="{{_data}}">
         </firebase-query>
-
 
         <app-header-layout id="layout" has-scrolling-region fullbleed>
 
@@ -77,9 +83,11 @@
                 <crew-team-manager-rigger-list-results id="results" data="[[_data]]" boat="{{_boat}}"></crew-team-manager-rigger-list-results>
                 <crew-team-manager-rigger-list-message id="message"></crew-team-manager-rigger-list-message>
             </iron-pages>
-
+            <paper-fab id="fab" icon="plus" on-click="_handleActionCreate">
+            </paper-fab>
 
         </app-header-layout>
+
 
 
     </template>
@@ -107,7 +115,8 @@
                     },
 
                     _data: {
-                        type: Object
+                        type: Object,
+                        name: ''
                     }
 
                 }
@@ -115,6 +124,14 @@
 
             _handleActionMenu() {
                 this.dispatchEvent(new CustomEvent(crewTeamManagerRiggerList.is + '-action-menu', {
+                    bubbles: true,
+                    composed: true
+                }));
+            }
+
+            _handleActionCreate() {
+                console.log('fire');
+                this.dispatchEvent(new CustomEvent(crewTeamManagerRiggerList.is + '-action-create', {
                     bubbles: true,
                     composed: true
                 }));
@@ -128,6 +145,7 @@
                     if (dataSplices.indexSplices[0].object.length) {
                         page = 'results';
                     }
+
                 }
 
                 this._page = page;
